# backend/api_gateway/api/api.yml
@@ -15,27 +15,27 @@ paths:
         - locations
       summary: Получение списка локаций
       responses:
-        '200':
+        "200":
           description: Успешный ответ
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Location'
+                  $ref: "#/components/schemas/Location"
                 maxItems: 100
-        '400':
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
     post:
       tags:
         - locations
@@ -44,58 +44,65 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateLocationRequest'
+              $ref: "#/components/schemas/CreateLocationRequest"
         required: true
       responses:
-        '201':
+        "201":
           description: Локация успешно создана
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Location'
+                $ref: "#/components/schemas/Location"
               example:
                 id: 3
                 name: Новый храм
                 address: ул. Новая, 67
-        '400':
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
   /services:
     get:
       tags:
         - services
       summary: Получение списка услуг
+      parameters:
+        - name: registration_available
+          in: query
+          style: form
+          explode: true
+          schema:
+            type: boolean
       responses:
-        '200':
+        "200":
           description: Успешный ответ
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ServiceType'
+                  $ref: "#/components/schemas/ServiceType"
                 maxItems: 100
-        '400':
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
   /services/{id}:
     get:
       tags:
@@ -111,27 +118,68 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        "200":
           description: Успешный ответ
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ServiceType'
+                $ref: "#/components/schemas/ServiceType"
               example:
                 id: 1
                 name: Исповедь
-        '400':
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
+    put:
+      tags:
+        - services
+      summary: Обновление информации об услуге по идентификатору
+      parameters:
+        - name: id
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateServiceRegistrationRequest"
+        required: true
+      responses:
+        "200":
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ServiceType"
+              example:
+                id: 1
+                name: Исповедь
+        "400":
+          description: Ошибка валидации
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /timeSlots:
     get:
       tags:
@@ -163,27 +211,27 @@ paths:
             type: string
             format: date-time
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/TimeSlot'
+                  $ref: "#/components/schemas/TimeSlot"
                 maxItems: 100
-        '400':
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
     post:
       tags:
         - timeSlots
@@ -192,27 +240,27 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateTimeSlotRequest'
+              $ref: "#/components/schemas/CreateTimeSlotRequest"
         required: true
       responses:
-        '201':
+        "201":
           description: Временной слот успешно создан
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimeSlot'
-        '400':
+                $ref: "#/components/schemas/TimeSlot"
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
   /timeSlots/{id}:
     get:
       tags:
@@ -228,24 +276,24 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        "200":
           description: Временной слот
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimeSlot'
-        '400':
+                $ref: "#/components/schemas/TimeSlot"
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
     put:
       tags:
         - timeSlots
@@ -263,27 +311,27 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TimeSlot'
+              $ref: "#/components/schemas/TimeSlot"
         required: true
       responses:
-        '200':
+        "200":
           description: Временной слот успешно обновлен
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimeSlot'
-        '400':
+                $ref: "#/components/schemas/TimeSlot"
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
     delete:
       tags:
         - timeSlots
@@ -298,7 +346,7 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        "200":
           description: Временной слот успешно удален
           content:
             application/json:
@@ -307,18 +355,18 @@ paths:
                 properties:
                   success:
                     type: boolean
-        '400':
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
   /timeSlots/{id}/activate:
     patch:
       tags:
@@ -335,24 +383,24 @@ paths:
             format: int64
           example: 1
       responses:
-        '200':
+        "200":
           description: Временной слот успешно активирован
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimeSlot'
-        '400':
+                $ref: "#/components/schemas/TimeSlot"
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
   /timeSlots/{id}/archive:
     patch:
       tags:
@@ -368,50 +416,50 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        "200":
           description: Временной слот успешно архивирован
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimeSlot'
-        '400':
+                $ref: "#/components/schemas/TimeSlot"
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
   /events:
     get:
       tags:
         - events
       summary: Получение списка событий
       responses:
-        '200':
+        "200":
           description: Успешный ответ
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Event'
-        '400':
+                  $ref: "#/components/schemas/Event"
+        "400":
           description: Ошибка валидации
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '500':
+                $ref: "#/components/schemas/Error"
+        "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
 components:
   securitySchemes:
     BearerAuth:
@@ -488,6 +536,20 @@ components:
         name: Исповедь
         min_period_days: 1
         registration_available: true
+    UpdateServiceRegistrationRequest:
+      type: object
+      properties:
+        min_period_days:
+          type: integer
+          format: int32
+        registration_available:
+          type: boolean
+      required:
+        - min_period_days
+        - registration_available
+      example:
+        min_period_days: 1
+        registration_available: true
     TimeSlotService:
       type: object
       properties:
@@ -515,7 +577,7 @@ components:
         serviceTypeId: 1
         capacity: 20
         bookingWindow: 30
-        time: '2024-03-20T09:00:00Z'
+        time: "2024-03-20T09:00:00Z"
     Recurrence:
       type: object
       properties:
@@ -546,7 +608,7 @@ components:
         frequency: weekly
         interval: 1
         endType: date
-        endValue: '2024-04-20T19:00:00Z'
+        endValue: "2024-04-20T19:00:00Z"
     TimeSlot:
       type: object
       properties:
@@ -580,9 +642,9 @@ components:
         services:
           type: array
           items:
-            $ref: '#/components/schemas/TimeSlotService'
+            $ref: "#/components/schemas/TimeSlotService"
         recurrence:
-          $ref: '#/components/schemas/Recurrence'
+          $ref: "#/components/schemas/Recurrence"
       required:
         - id
         - title
@@ -599,20 +661,20 @@ components:
         type: single
         locationId: 1
         capacity: 50
-        startDate: '2024-03-20T09:00:00Z'
-        endDate: '2024-03-20T10:00:00Z'
+        startDate: "2024-03-20T09:00:00Z"
+        endDate: "2024-03-20T10:00:00Z"
         status: active
         services:
           - timeSlotId: 1
             serviceTypeId: 1
             capacity: 20
             bookingWindow: 30
-            time: '2024-03-20T09:00:00Z'
+            time: "2024-03-20T09:00:00Z"
           - timeSlotId: 1
             serviceTypeId: 2
             capacity: 30
             bookingWindow: 30
-            time: '2024-03-20T09:30:00Z'
+            time: "2024-03-20T09:30:00Z"
     CreateTimeSlotRequest:
       type: object
       properties:
@@ -646,9 +708,9 @@ components:
         services:
           type: array
           items:
-            $ref: '#/components/schemas/TimeSlotService'
+            $ref: "#/components/schemas/TimeSlotService"
         recurrence:
-          $ref: '#/components/schemas/Recurrence'
+          $ref: "#/components/schemas/Recurrence"
       required:
         - title
         - type
@@ -657,46 +719,27 @@ components:
         - startDate
         - endDate
         - services
-      examples:
-        recurring:
-          value:
-            title: Тест повторение
-            type: recurring
-            locationId: 1
-            capacity: 100
-            startDate: '2025-03-20T18:00:00Z'
-            endDate: '2025-03-20T19:00:00Z'
+      example:
+        title: Тест повторение
+        type: recurring
+        locationId: 1
+        capacity: 100
+        startDate: "2025-03-20T18:00:00Z"
+        endDate: "2025-03-20T19:00:00Z"
         services:
           - serviceTypeId: 1
             capacity: 40
             bookingWindow: 30
-            time: '2025-03-20T18:00:00Z'
+            time: "2025-03-20T18:00:00Z"
           - serviceTypeId: 2
             capacity: 60
             bookingWindow: 30
-            time: '2025-03-20T18:30:00Z'
+            time: "2025-03-20T18:30:00Z"
         recurrence:
           frequency: weekly
           interval: 1
           endType: date
-          endValue: '2025-04-20T19:00:00Z'
-        single:
-          value:
-            title: Тест одиночный
-            type: single
-            locationId: 1
-            capacity: 100
-            startDate: '2025-03-20T18:00:00Z'
-            endDate: '2025-03-20T19:00:00Z'
-            services:
-              - serviceTypeId: 1
-                capacity: 40
-                bookingWindow: 30
-                time: '2025-03-20T18:00:00Z'
-              - serviceTypeId: 2
-                capacity: 60
-                bookingWindow: 30
-                time: '2025-03-20T18:30:00Z'
+          endValue: "2025-04-20T19:00:00Z"
     Event:
       type: object
       properties:
@@ -720,4 +763,4 @@ components:
         id: 1
         timeSlotServiceId: 1
         capacity: 20
-        datetime: '2024-03-20T09:00:00Z'
+        datetime: "2024-03-20T09:00:00Z"
