# backend/api_gateway/internal/usecases/services/services_dto.go
@@ -1,6 +1,11 @@
 package services
 
-type CreateServiceTypeSettingsReq struct {
-	PeriodDays    int64 `json:"period_days" validate:"required"`
-	ServiceTypeId int64 `json:"service_type_id" validate:"required"`
+type UpdateServiceTypeReq struct {
+	ServiceTypeID         int64 `json:"service_type_id" validate:"required"`
+	MinPeriodDays         int64 `json:"min_period_days" validate:"required"`
+	RegistrationAvailable bool  `json:"registration_available" validate:"required"`
+}
+
+type GetServicesParams struct {
+	RegistrationAvailable bool `json:"registration_available" validate:"required"`
 }
